feat: add EEI server saved views
